--- a/calc_avg_structure.config
+++ b/calc_avg_structure.config
@@ -1,16 +1,16 @@
 # NECESSARY PARAMETERS
-pdb_file = 'truncated.pdb'	# Local or Global position of a pdb file of the MD system that will be analyzed
-traj_loc = 'Trajectories/'	# Local or Global position of the directory where trajectories are located
+pdb_file = '../truncated.pdb'	# Local or Global position of a pdb file of the MD system that will be analyzed
+traj_loc = '../Trajectories/'	# Local or Global position of the directory where trajectories are located
 start = 1 			# the integer of the trajectory that will be first to be analyzed
-end = 150			# the integer of the trajectory that will be last to be analyzed
+end = 2				# the integer of the trajectory that will be last to be analyzed
 system = 'amber_apo'		# system descripter string, used for naming files
 Wrapped = True
 
 # OPTIONAL PARAMETERS
 # ATOM SELECTION PARAMETERS
-alignment = 'protein and name CA and (resid 20:25 or resid 50:55 or resid 73:75 or resid 90:94 or resid 112:116 or resid 142:147 or resid 165:169 or resid 190:194 or resid 214:218 or resid 236:240 or resid 253:258 or resid 303:307)'
-important = 'protein or nucleic or resname A5 or resname A3 or resname U5 or resname atp or resname adp or resname PHX or resname MG'
-substrate = 'nucleic or resname A5 or resname A3 or resname U5 or resname atp or resname adp or resname PHX or resname MG'	# WILL ONLY BE USED IF WRAPPED == FALSE; this selection string will be used to determine which residues are important to wrap about the alignment selection
+alignment = 'protein and name CA and (resid 20:25 50:55 73:75 90:94 112:116 142:147 165:169 190:194 214:218 236:240 253:258 303:307)'
+important = 'protein or nucleic or resname A5 A3 U5 atp adp PHX MG'
+substrate = 'nucleic or resname A5 A3 U5 atp adp PHX MG'	# WILL ONLY BE USED IF WRAPPED == FALSE; this selection string will be used to determine which residues are important to wrap about the alignment selection
 
 # AVERAGING PARAMETERS
 thresh = 1E-5
