added a avg_filename parameter that will be used for the naming of the pdb and dcd files

--- a/calc_avg_structure.config
+++ b/calc_avg_structure.config
@@ -5,6 +5,7 @@ start = 1 			# the integer of the trajectory that will be first to be analyzed
 end = 2				# the integer of the trajectory that will be last to be analyzed
 system = 'amber_apo'		# system descripter string, used for naming files
 Wrapped = True
+avg_filename = '001.002.amber_apo.avg_structure'
 
 # OPTIONAL PARAMETERS
 # ATOM SELECTION PARAMETERS
