--- a/sample.config
+++ b/sample.config
@@ -1,10 +1,10 @@
 # NECESSARY PARAMETERS
-pdb_file = '../../truncated.pdb'	# Local or Global position of a pdb file of the MD system that will be analyzed
-traj_loc = '../../Trajectories/'	# Local or Global position of the directory where trajectories are located
-start = AAA				# the integer of the trajectory that will be first to be analyzed
-end = BBB				# the integer of the trajectory that will be last to be analyzed
-Wrapped = True				# Boolean to determine if the substrate atom selection needs to be wrapped to within the periodic box;
-avg_filename = 'XXX.YYY.amber_apo.avg_structure'	# string to be used in naming the pdb and dcd files that are saved of the average structure
+pdb_file = '../truncated.pdb'	# Local or Global position of a pdb file of the MD system that will be analyzed
+traj_loc = '../Trajectories/'	# Local or Global position of the directory where trajectories are located
+start = 1			# the integer of the trajectory that will be first to be analyzed
+end = 2				# the integer of the trajectory that will be last to be analyzed
+Wrapped = True			# Boolean to determine if the substrate atom selection needs to be wrapped to within the periodic box;
+avg_filename = '001.002.amber_apo.avg_structure'	# string to be used in naming the pdb and dcd files that are saved of the average structure
 
 # OPTIONAL PARAMETERS
 # ATOM SELECTION PARAMETERS
