[updated for NS5 selections and substrates]

--- a/calc_avg_structure.config
+++ b/calc_avg_structure.config
@@ -1,16 +1,16 @@
 # NECESSARY PARAMETERS
-pdb_file = '../../truncated.pdb'	# Local or Global position of a pdb file of the MD system that will be analyzed
-traj_loc = '../../Trajectories/'	# Local or Global position of the directory where trajectories are located
+pdb_file = '../traj/truncated.pdb'	# Local or Global position of a pdb file of the MD system that will be analyzed
+traj_loc = '../traj/Truncated/'	# Local or Global position of the directory where trajectories are located
 start = AAA				# the integer of the trajectory that will be first to be analyzed
 end = BBB				# the integer of the trajectory that will be last to be analyzed
 Wrapped = True				# Boolean to determine if the substrate atom selection needs to be wrapped to within the periodic box;
-avg_filename = 'XXX.YYY.amber_apo.avg_structure'	# string to be used in naming the pdb and dcd files that are saved of the average structure
+avg_filename = 'XXX.YYY.3evg_gtp_sah_wt_X.avg_structure'	# string to be used in naming the pdb and dcd files that are saved of the average structure
 
 # OPTIONAL PARAMETERS
 # ATOM SELECTION PARAMETERS
-alignment = 'protein and name CA and (resid 20:25 50:55 73:75 90:94 112:116 142:147 165:169 190:194 214:218 236:240 253:258 303:307)' 	# MDAnalysis atom selection string to be used for aligning each frame to the running average. 
-important = 'protein or nucleic or resname A5 A3 U5 atp adp PHX MG'	# MDAnalysis atom selection string that identifies the important molecules to be analyzed in this script
-substrate = 'nucleic or resname A5 A3 U5 atp adp PHX MG'	# WILL ONLY BE USED IF WRAPPED == FALSE; this selection string will be used to determine which residues are important to wrap about the alignment selection
+alignment = 'protein and name CA and (resid 15:23 50:60 68:73 79:86 90:96 117:120 135:138 150:161 170:175 182:193 197:199 211:214 222:236)' 	# MDAnalysis atom selection string to be used for aligning each frame to the running average. 
+important = 'protein or resname GTP SAH MG'	# MDAnalysis atom selection string that identifies the important molecules to be analyzed in this script
+substrate = 'resname GTP SAH MG'	# WILL ONLY BE USED IF WRAPPED == FALSE; this selection string will be used to determine which residues are important to wrap about the alignment selection
 
 # AVERAGING PARAMETERS
 thresh = 1E-5		# float value that determines the threshold for convergence of the iterative averaging process
