--- a/calc_avg_structure.config
+++ b/calc_avg_structure.config
@@ -1,10 +1,10 @@
 # NECESSARY PARAMETERS
-pdb_file = '../traj/truncated.pdb'	# Local or Global position of a pdb file of the MD system that will be analyzed
-traj_loc = '../traj/Truncated/'	# Local or Global position of the directory where trajectories are located
+pdb_file = '../../traj/truncated.pdb'	# Local or Global position of a pdb file of the MD system that will be analyzed
+traj_loc = '../../traj/Truncated/'	# Local or Global position of the directory where trajectories are located
 start = AAA				# the integer of the trajectory that will be first to be analyzed
 end = BBB				# the integer of the trajectory that will be last to be analyzed
 Wrapped = True				# Boolean to determine if the substrate atom selection needs to be wrapped to within the periodic box;
-avg_filename = 'XXX.YYY.3evg_gtp_sah_wt_X.avg_structure'	# string to be used in naming the pdb and dcd files that are saved of the average structure
+avg_filename = 'XXX.YYY.3evg_gtp_sah_wt_Z.avg_structure'	# string to be used in naming the pdb and dcd files that are saved of the average structure
 
 # OPTIONAL PARAMETERS
 # ATOM SELECTION PARAMETERS
