[updated configuration file for NS5]

--- a/calc_avg_structure.config
+++ b/calc_avg_structure.config
@@ -4,7 +4,7 @@ traj_loc = '../../traj/Truncated/'	# Local or Global position of the directory w
 start = AAA				# the integer of the trajectory that will be first to be analyzed
 end = BBB				# the integer of the trajectory that will be last to be analyzed
 Wrapped = True				# Boolean to determine if the substrate atom selection needs to be wrapped to within the periodic box;
-avg_filename = 'XXX.YYY.3evg_gtp_sah_wt_Z.avg_structure'	# string to be used in naming the pdb and dcd files that are saved of the average structure
+avg_filename = 'XXX.YYY.3evg_gtp_sah_wt_1.avg_structure'	# string to be used in naming the pdb and dcd files that are saved of the average structure
 
 # OPTIONAL PARAMETERS
 # ATOM SELECTION PARAMETERS
