updated in November 2019

--- a/calc_avg_structure.config
+++ b/calc_avg_structure.config
@@ -1,24 +1,23 @@
 # NECESSARY PARAMETERS
 pdb_file = '../../traj/truncated.pdb'	# Local or Global position of a pdb file of the MD system that will be analyzed
 traj_loc = '../../traj/Truncated/'	# Local or Global position of the directory where trajectories are located
-start = AAA				# the integer of the trajectory that will be first to be analyzed
-end = BBB				# the integer of the trajectory that will be last to be analyzed
-Wrapped = True				# Boolean to determine if the substrate atom selection needs to be wrapped to within the periodic box;
-avg_filename = 'XXX.YYY.3evg_gtp_sah_wt_1.avg_structure'	# string to be used in naming the pdb and dcd files that are saved of the average structure
+start = AAA				  	   # the integer of the trajectory that will be first to be analyzed
+end = BBB					     	 	 # the integer of the trajectory that will be last to be analyzed
+Wrapped = True							       	       # Boolean to determine if the substrate atom selection needs to be wrapped to within the periodic box;
+avg_filename = 'XXX.YYY.wt_ssrna_atp_1.avg_structure'			       # string to be used in naming the pdb and dcd files that are saved of the average structure
 
 # OPTIONAL PARAMETERS
 # ATOM SELECTION PARAMETERS
-alignment = 'protein and name CA and (resid 15:23 50:60 68:73 79:86 90:96 117:120 135:138 150:161 170:175 182:193 197:199 211:214 222:236)' 	# MDAnalysis atom selection string to be used for aligning each frame to the running average. 
-important = 'protein or resname GTP SAH MG'	# MDAnalysis atom selection string that identifies the important molecules to be analyzed in this script
-substrate = 'resname GTP SAH MG'	# WILL ONLY BE USED IF WRAPPED == FALSE; this selection string will be used to determine which residues are important to wrap about the alignment selection
+alignment = 'protein and name CA and (resid 20:25 50:55 73:75 90:94 112:116 142:147 165:169 190:194 214:218 236:240 253:258 303:307)'  # MDAnalysis atom selection string to be used for aligning each frame to the running average. 
+important = 'protein or nucleic or resname A5 A3 U5 ATP ADP PHX MG' # MDAnalysis atom selection string that identifies the important molecules to be analyzed in this script
+substrate = 'nucleic or resname A5 A3 U5 ATP ADP PHX MG'    # WILL ONLY BE USED IF WRAPPED == FALSE; this selection string will be used to determine which residues are important to wrap about the alignment selection
 
 # AVERAGING PARAMETERS
 thresh = 1E-5		# float value that determines the threshold for convergence of the iterative averaging process
-maxIter = 100		# int value that determines the maximum number of iterations to be performed in the averaging process
+maxIter = 100		  # int value that determines the maximum number of iterations to be performed in the averaging process
 
 # OUTPUT PARAMETERS
 write_dcd = True		# Boolean value; if True, the script will print out the average structure to a DCD file format, which has more sig figs than a standard pdb format; use a DCD file for subsequent analyses that utilize an average structure
-write_summary = True		# Boolean value; if True, the script will print out a summary file that breaks down the parameters used in the analysis and how to rerun the same analysis
-write_overview = True		# Boolean value; if True, the script will append information to a file that will amass information about which trajectories and the number of steps being averaged over; this file is then used in the weighted averaging script to obtain an average structure of large number of steps.
+write_summary = True		  # Boolean value; if True, the script will print out a summary file that breaks down the parameters used in the analysis and how to rerun the same analysis
+write_overview = True		    # Boolean value; if True, the script will append information to a file that will amass information about which trajectories and the number of steps being averaged over; this file is then used in the weighted averaging script to obtain an average structure of large number of steps.
 overview_filename = 'calc_avg_structure.output'
-
